# forseti-ruleset-base

./: .gitignore  Cargo.toml
src/: main.rs
src/rules/: max_line_length.rs  mod.rs  no_empty_files.rs  no_trailing_whitespace.rs  require_final_newline.rs
